Fixed p too large font-size and fixed cursor option for background

--- a/src/views/landing/Landing.scss
+++ b/src/views/landing/Landing.scss
@@ -11,6 +11,7 @@
 .wrapper{
 	padding-bottom: 80px;
 	padding-top: 80px;
+	cursor: default;
 }
 
 .landing-cover{
@@ -38,4 +39,8 @@ h5{
 
 html, body{
 	padding: 0px;
+}
+
+p{
+	font-size: large;
 }
